--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js",
     "start:render": "node src/server-render.js",
     "start:simple": "node src/render-start.js",
+    "start:whatsapp": "node src/whatsapp-lite.js",
     "dev": "nodemon src/server.js",
     "server": "node src/server.js",
     "api": "node src/server/api.js",
