--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:render": "node src/server-render.js",
     "start:simple": "node src/render-start.js",
     "start:whatsapp": "node src/whatsapp-lite.js",
+    "start:minimal": "node src/whatsapp-minimal.js",
     "dev": "nodemon src/server.js",
     "server": "node src/server.js",
     "api": "node src/server/api.js",
