--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:simple": "node src/render-start.js",
     "start:whatsapp": "node src/whatsapp-lite.js",
     "start:minimal": "node src/whatsapp-minimal.js",
+    "start:persistent": "node src/whatsapp-persistent.js",
     "dev": "nodemon src/server.js",
     "server": "node src/server.js",
     "api": "node src/server/api.js",
