fix: add Render-compatible WhatsApp server with auto Chrome detection - Add whatsapp-render.js with executablePath: undefined for auto Chrome detection - Update package.json with start:render-whatsapp script - Update render.yaml to use new script and AUTH_PATH - Fix Chrome ENOENT error by letting Puppeteer find Chrome automatically - Add --single-process flag for better Render compatibility

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:whatsapp": "node src/whatsapp-lite.js",
     "start:minimal": "node src/whatsapp-minimal.js",
     "start:persistent": "node src/whatsapp-persistent.js",
+    "start:render-whatsapp": "node src/whatsapp-render.js",
     "dev": "nodemon src/server.js",
     "server": "node src/server.js",
     "api": "node src/server/api.js",
