--- a/render.yaml
+++ b/render.yaml
@@ -4,17 +4,11 @@ services:
     env: node
     plan: free
     buildCommand: npm install
-    startCommand: npm run start:simple
+    startCommand: npm run start:render-whatsapp
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PORT
-        value: 3000
-      - key: BOT_NAME
-        value: FinanceBot
-      # Tambahkan environment variables lain di dashboard Render:
-      # - OPENAI_API_KEY
-      # - WHATSAPP_GROUP_ID
-      # - DB_PATH
+      - key: AUTH_PATH
+        value: /tmp/.wwebjs_auth
     healthCheckPath: /api/health
     autoDeploy: true 
