feat: add stable WhatsApp server with auto-reconnect and connection monitoring - Add whatsapp-stable.js with robust connection handling - Auto-reconnect with max 5 attempts and 5s delay - Periodic connection check every 30 seconds - Enhanced message handling for groups and private messages - Manual reconnect endpoint /api/reconnect - Connection status tracking (qr_ready, authenticated, connected, disconnected, error) - Fix WhatsApp disconnection issues after authentication

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:minimal": "node src/whatsapp-minimal.js",
     "start:persistent": "node src/whatsapp-persistent.js",
     "start:render-whatsapp": "node src/whatsapp-render.js",
+    "start:stable": "node src/whatsapp-stable.js",
     "dev": "nodemon src/server.js",
     "server": "node src/server.js",
     "api": "node src/server/api.js",
