--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     buildCommand: npm install
-    startCommand: npm run start:render-whatsapp
+    startCommand: npm run start:finance
     envVars:
       - key: NODE_ENV
         value: production
