chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.29.4",
     "node-cron": "^4.2.1",
     "openai": "^4.20.1",
+    "puppeteer": "^20.9.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "sqlite3": "^5.1.6",
