--- a/package.json
+++ b/package.json
@@ -2,27 +2,11 @@
   "name": "wa-finance-bot",
   "version": "1.0.0",
   "description": "WhatsApp AI Bot untuk pencatatan keuangan",
-  "main": "src/index.js",
+  "main": "src/whatsapp-finance-render.js",
   "scripts": {
-    "start": "node src/index.js",
-    "start:render": "node src/server-render.js",
-    "start:simple": "node src/render-start.js",
-    "start:whatsapp": "node src/whatsapp-lite.js",
-    "start:minimal": "node src/whatsapp-minimal.js",
-    "start:persistent": "node src/whatsapp-persistent.js",
-    "start:render-whatsapp": "node src/whatsapp-render.js",
-    "start:stable": "node src/whatsapp-stable.js",
-    "start:finance": "node src/whatsapp-finance-render.js",
-    "dev": "nodemon src/server.js",
-    "server": "node src/server.js",
-    "api": "node src/server/api.js",
+    "start": "node src/whatsapp-finance-render.js",
+    "dev": "nodemon src/whatsapp-finance-render.js",
     "test": "jest",
-    "test-bot": "node test-bot.js",
-    "session:status": "node session-manager.js",
-    "session:clear": "node -e \"const SessionManager = require('./session-manager.js'); const manager = new SessionManager(); manager.clearSession();\"",
-    "session:backup": "node -e \"const SessionManager = require('./session-manager.js'); const manager = new SessionManager(); manager.backupSession();\"",
-    "session:fix": "node fix-session-error.js",
-    "start:session": "node session-manager.js && npm run dev",
     "build": "echo 'No build step required'"
   },
   "keywords": [
@@ -47,7 +31,7 @@
     "puppeteer": "^20.9.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "better-sqlite3": "^9.4.0",
+    "sql.js": "^1.10.3",
     "whatsapp-web.js": "^1.23.0"
   },
   "devDependencies": {
